# probe-gui

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: FlashPanel.svelte  ProbePanel.svelte  RttPanel.svelte  StatusBar.svelte
