[package]
name = "probe-gui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
probe-rs = { path = "../../probe-rs/probe-rs", default-features = false, features = ["builtin-targets", "builtin-formats"] }
probe-rs-target = { path = "../../probe-rs/probe-rs-target" }
brtt = { path = "../../brtt" }
anyhow = "1.0"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
parking_lot = "0.12"

[patch.crates-io]
probe-rs = { path = "../../probe-rs/probe-rs" }
probe-rs-target = { path = "../../probe-rs/probe-rs-target" }
